--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\Chibi Mummy\Misc\Scripts\buttonControl_script.cs" />
      <Compile Include="Assets\Chibi Mummy\Misc\Scripts\CharMovement.cs" />
+     <Compile Include="Assets\Chibi Mummy\Misc\Scripts\NewBehaviourScript.cs" />
      <Compile Include="Assets\Scripts\Attacks\FrostAttack.cs" />
      <Compile Include="Assets\Scripts\Attacks\FrostDebuff.cs" />
      <Compile Include="Assets\Scripts\Attacks\LightningAttack.cs" />
